tests/fixtures/invalid/none_div_str.py
# Cannot divide None and Str
x: float = None / "hello"
